--- a/index.html
+++ b/index.html
@@ -58,8 +58,47 @@
             <div class="content-title">
                 温馨提示
             </div>
-            <div class="content-body">
-                <img class="tip-img" src="images/pic_07.png" alt="温馨提示" />
+            <div class="content-body tip-content">
+                【购买及激活说明】<br />
+                1.选号：网站手机号码目前仅支持年满18周岁以上的客户购买，并且须使用二代身份证办理入网。对于同一个身份证号码，单次只能购买1个号码，不能同时办理多个手机号码；并且一个身份证号码最多共能拥有5个中国移动手机号码（不区分省份和品牌）。<br />
+                2.支付：在线支付需在选号订单提交后的2小时内完成，否则选号订单失效，号码释放回收。由于系统对账原因，每日在线支付时间为0:30-23:00之间。<br />
+                3.配送：物流人员会在5天内为客户配送SIM卡。签收商品时需本人签收并提供机主身份证原件进行查验。同时请提供身份证复印件作为入网资料。<br />
+                4.实名制：按照国家实名制要求，请您在收到号码后，
+                使用微信扫码二维码完成在线实名认证。<br />
+                5.激活：为保证正常使用，请您在收货后的15天内拨打10086并按照语音提示进行激活。如未在指定的最晚激活时间之前进行激活操作，号码将自动销号。<br />
+                【4G·包年卡业务规则】<br />
+                1.包年卡品牌设定为动感地带，套餐为“2017年和4G校园卡38元卡”，本活动号码为重启号。<br />
+                2.本卡套外流量资费0.29元/MB，每达到10元可以免费使用至100MB，同时每达到60元可以免费使用至1GB，如此阶梯至执行双封顶规则。每年的1月、2月、7月、8月，将每月赠送500MB国内流量。卡内包含的数据流量为2G/3G/4G通用流量，卡中所指国内漫游、国内长途、短信、国内数据流量等均不含港澳台。<br />
+                3.本卡可以成为和家庭分享业务和多终端共享的主卡，套餐内的流量可以滚存。<br />
+                4.包年卡激活后，当月立即生效，从当月起计算共生效12个月/24个月。当月扣除整月套餐费38元，通信资源按日折算。方案生效期间，每月最低承诺消费金额38元，如未达到将按承诺金额扣除，代收费及通信账户支付消费不能计入最低消费中。<br />
+                5.分月返还和赠送的话费将存入副账户，不可退、转，不可用于代收费、第三方通信账户支付类消费，赠送话费消费不可打印转讫发票。<br />
+                6.包年卡激活后，不得办理转户、合户、分户、销户、携号转品牌等业务。合约期内如果要取消方案，需缴纳违约金，并只能在移动营业厅办理。违约金等于已赠送金额。用户未返还完的预存款退还给用户。<br />
+                7.方案生效期间，客户整月停机，仍需按方案承诺扣最低消费，话费正常返还及赠送。如欠费停机，按现有的欠费销号规则予以销号。<br />
+                8.方案生效期间，若客户参加其他有承诺低消的活动，承低消将叠加。<br />
+                9.本卡免费享有优酷视频（短信代码为KTYK9）、腾讯视频（KTTX9）、咪咕视频（KTMGSP9）、咪咕直播（KTMGZB9）、PPTV（KTPPTV9）4年免费3GB/月定向视频流量的办理特权。视频定向流量包每次仅可选择1个视频APP，如需更换视频APP，需先发送短信代码QXDX9到10086后，再发送需更换的视频APP短信订购代码到10086完成更换，变更后下月生效。<br />
+
+                【定向视频流量包业务规则】<br />
+                中国移动2G/3G/4G网络下，访问指定视频APP中的特定视频内容（其中优酷视频流量包中包含土豆视频内容），建议使用各上线视频APP时，更新为最新版本（其中安卓系统PPTV版本6.4.5/IOS系统PPTV版本6.4.14或以上）。<br />
+                但不包括以下内容：<br />
+                1.客户端启动、登录及客户端内的图片、文字、视频内插播广告、弹幕、第三方广告、主播类视频、在线观看/下载/缓存第三方视频等。<br />
+                2.手机号码处于国际或港澳台地区漫游状态下产生的流量。<br />
+                3.利用手机设置代理服务器或VPN等方式，访问APP所产生的流量。<br />
+                4.用无线上网卡、平板电脑、CPE、MIFI等非手机设备使用产生的流量。<br />
+                5.手机作为热点使用产生的流量。<br />
+                6.使用CMWAP接入点方式，访问视频APP所产生的流量。<br />
+                其他不包括说明：<br />
+                1.使用优酷视频下载/缓存该网站上的视频所产生的流量。<br />
+                2.使用聚力视频（PPTV）下载该网站上的视频所产生的流量。<br />
+                3.使用爱奇艺视频中的直播、音频播放、奇秀视频、VR视频、3D视频、视频购等内容。<br />
+                注：关于直播类视频说明（建议以客户端流量使用提醒为准）<br />
+                优酷视频：直播视频所用流量均不在“任我看”流量包内，暂无提示，计划月底上线；<br />
+                腾讯视频：直播视频所用流量在“任我看”流量包内，有移动流量包使用标识；<br />
+                聚力视频（PPTV）：直播-龙珠直播部分不在“任我看”流量包内，有移动流量包使用标识；<br />
+                咪咕视频：直播视频所用流量在“任我看”流量包内，有移动流量包使用标识；<br />
+                咪咕直播：主播视频不在“任我看”流量包内，有移动流量包使用标识。<br /><br />
+
+                更多活动详情请咨询10086。<br />
+                本活动最终解释权归中国移动通信集团北京有限公司。
             </div>
         </div>
     </div>
@@ -69,8 +108,6 @@
             document.getElementsByTagName('body')[0].style.visibility = 'visible';
         }, 100)
     </script>
-    <script src="js/zepto.min.js"></script>
-    <script src="js/index.js"></script>
 </body>
 
 </html>
