--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
                 温馨提示
             </div>
             <div class="content-body tip-content">
+                <div class="tip-content-box">
                 【购买及激活说明】<br />
                 1.选号：网站手机号码目前仅支持年满18周岁以上的客户购买，并且须使用二代身份证办理入网。对于同一个身份证号码，单次只能购买1个号码，不能同时办理多个手机号码；并且一个身份证号码最多共能拥有5个中国移动手机号码（不区分省份和品牌）。<br />
                 2.支付：在线支付需在选号订单提交后的2小时内完成，否则选号订单失效，号码释放回收。由于系统对账原因，每日在线支付时间为0:30-23:00之间。<br />
                 3.配送：物流人员会在5天内为客户配送SIM卡。签收商品时需本人签收并提供机主身份证原件进行查验。同时请提供身份证复印件作为入网资料。<br />
-                4.实名制：按照国家实名制要求，请您在收到号码后，
+                4.实名制：按照国家实名制要求，请您在收到号码后，<img style="width: 1.3rem;display: inlne-block;" src="images/ma.jpg" alt="" />
                 使用微信扫码二维码完成在线实名认证。<br />
-                5.激活：为保证正常使用，请您在收货后的15天内拨打10086并按照语音提示进行激活。如未在指定的最晚激活时间之前进行激活操作，号码将自动销号。<br />
+                5.激活：为保证正常使用，请您在收货后的15天内拨打10086并按照语音提示进行激活。如未在指定的最晚激活时间之前进行激活操作，号码将自动销号。<br /><br />
                 【4G·包年卡业务规则】<br />
                 1.包年卡品牌设定为动感地带，套餐为“2017年和4G校园卡38元卡”，本活动号码为重启号。<br />
                 2.本卡套外流量资费0.29元/MB，每达到10元可以免费使用至100MB，同时每达到60元可以免费使用至1GB，如此阶梯至执行双封顶规则。每年的1月、2月、7月、8月，将每月赠送500MB国内流量。卡内包含的数据流量为2G/3G/4G通用流量，卡中所指国内漫游、国内长途、短信、国内数据流量等均不含港澳台。<br />
@@ -75,8 +76,7 @@
                 6.包年卡激活后，不得办理转户、合户、分户、销户、携号转品牌等业务。合约期内如果要取消方案，需缴纳违约金，并只能在移动营业厅办理。违约金等于已赠送金额。用户未返还完的预存款退还给用户。<br />
                 7.方案生效期间，客户整月停机，仍需按方案承诺扣最低消费，话费正常返还及赠送。如欠费停机，按现有的欠费销号规则予以销号。<br />
                 8.方案生效期间，若客户参加其他有承诺低消的活动，承低消将叠加。<br />
-                9.本卡免费享有优酷视频（短信代码为KTYK9）、腾讯视频（KTTX9）、咪咕视频（KTMGSP9）、咪咕直播（KTMGZB9）、PPTV（KTPPTV9）4年免费3GB/月定向视频流量的办理特权。视频定向流量包每次仅可选择1个视频APP，如需更换视频APP，需先发送短信代码QXDX9到10086后，再发送需更换的视频APP短信订购代码到10086完成更换，变更后下月生效。<br />
-
+                9.本卡免费享有优酷视频（短信代码为KTYK9）、腾讯视频（KTTX9）、咪咕视频（KTMGSP9）、咪咕直播（KTMGZB9）、PPTV（KTPPTV9）4年免费3GB/月定向视频流量的办理特权。视频定向流量包每次仅可选择1个视频APP，如需更换视频APP，需先发送短信代码QXDX9到10086后，再发送需更换的视频APP短信订购代码到10086完成更换，变更后下月生效。<br /><br />
                 【定向视频流量包业务规则】<br />
                 中国移动2G/3G/4G网络下，访问指定视频APP中的特定视频内容（其中优酷视频流量包中包含土豆视频内容），建议使用各上线视频APP时，更新为最新版本（其中安卓系统PPTV版本6.4.5/IOS系统PPTV版本6.4.14或以上）。<br />
                 但不包括以下内容：<br />
@@ -96,9 +96,9 @@
                 聚力视频（PPTV）：直播-龙珠直播部分不在“任我看”流量包内，有移动流量包使用标识；<br />
                 咪咕视频：直播视频所用流量在“任我看”流量包内，有移动流量包使用标识；<br />
                 咪咕直播：主播视频不在“任我看”流量包内，有移动流量包使用标识。<br /><br />
-
                 更多活动详情请咨询10086。<br />
                 本活动最终解释权归中国移动通信集团北京有限公司。
+                </div>
             </div>
         </div>
     </div>
