--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 1.选号：网站手机号码目前仅支持年满18周岁以上的客户购买，并且须使用二代身份证办理入网。对于同一个身份证号码，单次只能购买1个号码，不能同时办理多个手机号码；并且一个身份证号码最多共能拥有5个中国移动手机号码（不区分省份和品牌）。<br />
                 2.支付：在线支付需在选号订单提交后的2小时内完成，否则选号订单失效，号码释放回收。由于系统对账原因，每日在线支付时间为0:30-23:00之间。<br />
                 3.配送：物流人员会在5天内为客户配送SIM卡。签收商品时需本人签收并提供机主身份证原件进行查验。同时请提供身份证复印件作为入网资料。<br />
-                4.实名制：按照国家实名制要求，请您在收到号码后，<img style="width: 1.3rem;display: inlne-block;" src="images/ma.jpg" alt="" />
+                4.实名制：按照国家实名制要求，请您在收到号码后，<img style="width: 1.3rem;display: inline-block;" src="images/ma.jpg" alt="" />
                 使用微信扫码二维码完成在线实名认证。<br />
                 5.激活：为保证正常使用，请您在收货后的15天内拨打10086并按照语音提示进行激活。如未在指定的最晚激活时间之前进行激活操作，号码将自动销号。<br /><br />
                 【4G·包年卡业务规则】<br />
